# k8IVAN

./: .gitignore  .gitmodules  0build.sh  AUTHORS  ChangeLog  Jamfile  Jamrules  Jamrules.configure  Jamrules.defines  Jamrules.install  Jamrules.windoze  LICENSING  Makefile.am  NEWZ  README.orig  configure.in  kconfigure
src/felib/: Jamfile  Makefile.am  allocate.h  bitmap.cpp  bitmap.h  config.cpp  config.h  error.cpp  error.h  fearray.h  febot.cpp  febot.h  feerror.cpp  feerror.h  feio.cpp  feio.h  felibdef.h  felist.cpp  felist.h  feloops.h  femain.cpp  femath.cpp  femath.h  feparse.cpp  feparse.h  fesave.cpp  fesave.h  festring.cpp  festring.h  fetime.cpp  fetime.h  graphics.cpp  graphics.h  hscore.cpp  hscore.h  pragmas.h  rawbit.cpp  rawbit.h  rect.h  regex.c  (+7 more)
src/game/: Jamfile  Makefile.am  action.cpp  action.h  actions.cpp  actions.h  actset.cpp  area.cpp  area.h  areaset.cpp  balance.h  bodypart.cpp  bodypart.h  char.cpp  char.h  characters.cpp  characters.h  charset.cpp  charset.h  charsset.cpp  command.cpp  command.h  confdef.h  cont.cpp  cont.h  coreset.cpp  database.cpp  database.h  dataset.cpp  dungeon.cpp  dungeon.h  entity.cpp  entity.h  fluid.cpp  fluid.h  game.cpp  game.h  gear.cpp  gear.h  god.cpp  (+86 more)
src/game/actions/: 0list.cpp  action_consume.cpp  action_dig.cpp  action_go.cpp  action_rest.cpp  action_study.cpp  action_unconsciousness.cpp  dig.cpp  go.cpp  rest.cpp  study.cpp  unconsciousness.cpp
src/game/bodyparts/: 0list.cpp  alien_adultalientorso.cpp  alien_aliendogtorso.cpp  bodypart_arm.cpp  bodypart_head.cpp  bodypart_leg.cpp  bodypart_torso.cpp  corpse_largecorpse.cpp  head_playerkindhead.cpp  humanoidtorso_playerkindtorso.cpp  item_bodypart.cpp  item_corpse.cpp  largetorso_lobhsetorso.cpp  leftleg_playerkindleftleg.cpp  leg_leftleg.cpp  normaltorso_dogtorso.cpp  normaltorso_largetorso.cpp  normaltorso_mysticfrogtorso.cpp  normaltorso_spidertorso.cpp  rightarm_playerkindrightarm.cpp  torso_humanoidtorso.cpp
src/game/characters/: 0list.cpp
src/game/commands/: 0list.cpp  Apply.cpp  AssignName.cpp  Burn.cpp  Close.cpp  DetachBodyPart.cpp  Dip.cpp  DrawMessageHistory.cpp  Drink.cpp  Drop.cpp  Dump.cpp  Eat.cpp  EquipmentScreen.cpp  ForceVomit.cpp  GainAllItems.cpp  GainDivineKnowledge.cpp  GetScroll.cpp  Go.cpp  GoDown.cpp  GoUp.cpp  IssueCommand.cpp  Kick.cpp  LevelTeleport.cpp  Look.cpp  LowerGodRelations.cpp  LowerStats.cpp  NOP.cpp  Offer.cpp  Open.cpp  OpenMondedr.cpp  OpenXinTomb.cpp  PickUp.cpp  Polymorph.cpp  Possess.cpp  Pray.cpp  (+31 more)
(+595 files in other folders)
