noinst_LIBRARIES = libfelib.a
noinst_HEADERS = allocate.h bitmap.h config.h error.h fearray.h feio.h felibdef.h felist.h feloops.h femath.h festring.h fetime.h graphics.h hscore.h pragmas.h rawbit.h rect.h save.h typedef.h v2.h whandler.h
libfelib_a_SOURCES = bitmap.cpp config.cpp error.cpp feio.cpp felist.cpp femain.cpp femath.cpp festring.cpp fetime.cpp graphics.cpp hscore.cpp save.cpp rawbit.cpp whandler.cpp
INCLUDES=-I@top_srcdir@/src/felib
